<resources>
    <string name="app_name">Github</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="made_by">Made by</string>
    <string name="github"> Github </string>
    <string name="my_name">Alex Lianardo</string>
    <string name="location">%s </string>
    <string name="repository">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="number">%s </string>
    <string name="company">%s </string>
    <string name="detail">Detail User</string>
</resources>