<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:screenOrientation="portrait"
        tools:context=".UsersDetailActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_img_user"
            android:layout_width="130dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:src="@android:color/darker_gray"
            app:civ_border_color="#FF909090"
            app:civ_border_width="2dp"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/progressBar_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.116" />

        <TextView
            android:id="@+id/detail_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/username"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_img_user" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/name"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_username" />

        <TextView
            android:id="@+id/detail_followers"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/followers"
            app:layout_constraintEnd_toEndOf="@+id/detail_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/detail_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/number" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/followers"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_followers"
            app:layout_constraintEnd_toEndOf="@+id/detail_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_followers"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/detail_following"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/followers"
            app:layout_constraintEnd_toEndOf="@+id/detail_name"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toEndOf="@+id/followers"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/number" />

        <TextView
            android:id="@+id/following"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/following"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/followers"
            app:layout_constraintEnd_toEndOf="@+id/detail_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_following"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detail_repository"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view_pager"
            app:layout_constraintEnd_toEndOf="@+id/following"
            app:layout_constraintHorizontal_bias="0.301"
            app:layout_constraintStart_toStartOf="@+id/detail_followers"
            app:layout_constraintTop_toBottomOf="@+id/followers"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/number" />

        <TextView
            android:id="@+id/repository"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/repository"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_repository"
            app:layout_constraintEnd_toEndOf="@+id/following"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_repository"
            app:layout_constraintTop_toTopOf="@+id/detail_repository"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/detail_company"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/company"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_repository" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/location"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_company"
            app:layout_constraintVertical_bias="0.051" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="260dp"
            android:background="@color/grey"
            android:minHeight="?actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.087"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="2dp"
            app:tabRippleColor="@null"
            app:tabMode="fixed"
            app:tabGravity="fill"
            tools:ignore="MissingConstraints">

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="1400dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tabs"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>